--- a/app/base/templates/site_template/header-auth.html
+++ b/app/base/templates/site_template/header-auth.html
@@ -6,13 +6,8 @@
           <div class="row justify-content-center">
             <div class="col-lg-5 col-md-6">
               <h1 class="text-white">
-                  <a class="text-white"
-                     href="https://appseed.us/admin-dashboards/flask-boilerplate-dashboard-argon">Flask Dashboard Argon</a>
+                  Hotel Admin Dashboard
               </h1>
-              <p class="text-lead text-light">
-                <a class="text-white"
-                   href="https://github.com/app-generator/flask-boilerplate-dashboard-argon">Open-Source Flask Boilerplate</a> coded on top pf Argon Design.
-              </p>
             </div>
           </div>
         </div>
