--- a/app/base/templates/login/register.html
+++ b/app/base/templates/login/register.html
@@ -16,7 +16,7 @@
                 {% if msg %}
                   <span class="text-danger">{{ msg | safe }}</span>
                 {% else %}
-                  Registered
+                  Register
                 {% endif %}
 
               </div>
