--- a/app/base/templates/site_template/navigation-auth.html
+++ b/app/base/templates/site_template/navigation-auth.html
@@ -29,9 +29,14 @@
           <ul class="navbar-nav ml-auto">
 
             <li class="nav-item">
-              <a class="nav-link nav-link-icon" href="https://appseed.us/admin-dashboards/open-source">
-                <i class="ni ni-spaceship"></i>
-                <span class="nav-link-inner--text">More Dashboards</span>
+              <a class="nav-link nav-link-icon" href={{ url_for('base_blueprint.login') }}>
+                <span class="nav-link-inner--text">Login</span>
+              </a>
+            </li>
+			
+			<li class="nav-item">
+              <a class="nav-link nav-link-icon" href={{ url_for('base_blueprint.create_user') }}>
+                <span class="nav-link-inner--text">Register</span>
               </a>
             </li>
 
