--- a/app/base/templates/login/login.html
+++ b/app/base/templates/login/login.html
@@ -28,6 +28,8 @@
             <div class="card-body px-lg-5 py-lg-5">
 
               <form role="form" method="post" action="">
+			  
+				{% from "site_template/_formhelpers.html" import render_errors %}
 
                 {{ form.hidden_tag() }}
 
@@ -38,6 +40,7 @@
                     </div>
                     {{ form.username(placeholder="Username",class="form-control") }}
                   </div>
+				  {{ render_errors(form.username) }}
                 </div>
                 <div class="form-group">
                   <div class="input-group input-group-alternative">
@@ -46,6 +49,7 @@
                     </div>
                     {{ form.password(placeholder="Password",class="form-control",type="password") }}
                   </div>
+				  {{ render_errors(form.password) }}
                 </div>
 				
 				<div class="form-group text-center">
