--- a/app/home/templates/profile.html
+++ b/app/home/templates/profile.html
@@ -1,137 +1,212 @@
 {% extends "base_site.html" %}
-
 {% block title %} Profile {% endblock title %}
-
 {% block stylesheets %}
-  {{ super() }}
+{{ super() }}
 {% endblock stylesheets %}
-
 {% block content %}
-
-    {% include "site_template/navigation.html" %}
-      
-    <!-- Header -->
-    <div class="header pb-8 pt-5 pt-lg-8 d-flex align-items-center" style="min-height: 600px; background-image: url(/static/assets/img/theme/profile-cover.jpg); background-size: cover; background-position: center top;">
-    <!-- Mask -->
-    <span class="mask bg-gradient-default opacity-8"></span>
-    <!-- Header container -->
-    <div class="container-fluid d-flex align-items-center">
-        <div class="row">
-        <div class="col-lg-7 col-md-10">
+{% include "site_template/navigation.html" %}
+<!-- Header -->
+<div class="header pb-8 pt-5 pt-lg-8 d-flex align-items-center" style="min-height: 600px; background-image: url(/static/assets/img/theme/profile-cover.jpg); background-size: cover; background-position: center top;">
+   <!-- Mask -->
+   <span class="mask bg-gradient-default opacity-8"></span>
+   <!-- Header container -->
+   <div class="container-fluid d-flex align-items-center">
+      <div class="row">
+         <div class="col-lg-7 col-md-10">
             <h1 class="display-2 text-white">Hello {{ current_user.username }}</h1>
             <p class="text-white mt-0 mb-5">
-                This is your profile page. 
-            You can edit your details and see the progress you have made with your work.</p>
+               This is your profile page. 
+               You can edit your details and see the progress you have made with your work.
+            </p>
             <a href="#!" class="btn btn-info">Edit profile</a>
-        </div>
-        </div>
-    </div>
-    </div>
-      
-    <!-- Page content -->
-    <div class="container-fluid mt--7">
-
-        <div class="row justify-content-md-center">
-            <div class="col-md-6">
-            <div class="card bg-secondary shadow">
-                <div class="card-header bg-white border-0">
-                <div class="row align-items-center">
-                    <div class="col-8">
-                    <h3 class="mb-0">My account</h3>
-                    </div>
-                    <div class="col-4 text-right">
-                    <a href="#!" class="btn btn-sm btn-primary">Settings</a>
-                    </div>
-                </div>
-                </div>
-                <div class="card-body">
-                <form>
-                    <h6 class="heading-small text-muted mb-4">User information - {{ current_user.id }}</h6>
-					<div class="form-group">
-						<label class="form-control-label" for="input-username">Username</label>
-						<input type="text" id="input-username" class="form-control form-control-alternative" 
-							   placeholder="Username" value="{{ current_user.username }}">
-					</div>
-					
-					<div class="form-group">
-						<label class="form-control-label" for="input-email">Email address</label>
-						<input type="email" id="input-email" class="form-control form-control-alternative" 
-							   placeholder="Email" value="{{ current_user.email }}">
-					</div>
-					
-					<div class="form-group">
-						<label class="form-control-label" for="input-first-name">First name</label>
-						<input type="text" id="input-first-name" class="form-control form-control-alternative" placeholder="First name" value="Lucky">
-					</div>
-					
-					<div class="form-group">
-						<label class="form-control-label" for="input-last-name">Last name</label>
-						<input type="text" id="input-last-name" class="form-control form-control-alternative" placeholder="Last name" value="Jesse">
-					</div>
-					
-					<div class="form-group">
-						<span>
-							<label class="form-control-label" for="exampleFormControlSelect1">Language</label>
-							<i class="ni ni-world-2 align-middle"></i>
-						</span>
-						<select class="form-control" id="exampleFormControlSelect1">
-						  <option>1</option>
-						  <option>2</option>
-						  <option>3</option>
-						  <option>4</option>
-						  <option>5</option>
-						</select>
-					</div>
-					
-				  <div class="text-center">
-                    <button type="submit" name="save" class="btn btn-primary my-4">Save edits</button>
+         </div>
+      </div>
+   </div>
+</div>
+<!-- Page content -->
+<div class="container-fluid mt--7">
+   <div class="row justify-content-md-center">
+      <div class="col-xl-4 order-xl-2 mb-5 mb-xl-0">
+         <div class="card card-profile shadow">
+            <div class="card-header text-center border-0 pt-8 pt-md-4 pb-0 pb-md-4">
+               <div class="d-flex justify-content-center">
+                  <div style="width: 20rem;">
+                     <div class="card card-stats">
+                        <!-- Card body -->
+                        <div class="card-body">
+                           <div class="row">
+                              <div class="col">
+                                 <h5 class="card-title text-uppercase text-muted mb-0">Last login</h5>
+                                 <span class="h2 font-weight-bold mb-0">{{ momentjs(current_user.last_login).calendar() }}</span>
+                              </div>
+                              <div class="col-auto">
+                                 <div class="icon icon-shape bg-orange text-white rounded-circle shadow">
+                                    <i class="ni ni-time-alarm"></i>
+                                 </div>
+                              </div>
+                           </div>
+                        </div>
+                     </div>
                   </div>
-                    <!--
-					<div class="pl-lg-4">
-                    <div class="row">
-                        <div class="col-lg-6">
-                        <div class="form-group">
-                            <label class="form-control-label" for="input-username">Username</label>
-                            <input type="text" id="input-username" class="form-control form-control-alternative" 
-                                   placeholder="Username" value="{{ current_user.username }}">
+               </div>
+			   
+				<div class="d-flex justify-content-center mt-4">
+                  <div style="width: 20rem;">
+                     <div class="card card-stats">
+                        <!-- Card body -->
+                        <div class="card-body">
+                           <div class="row">
+                              <div class="col">
+                                 <h5 class="card-title text-uppercase text-muted mb-0">Superuser</h5>
+								 {% if current_user.is_admin %}
+									<span class="h2 font-weight-bold text-success mb-0">Enabled</span>
+								 {% else %}
+									<span class="h2 font-weight-bold text-danger mb-0">Disabled</span>
+								 {% endif %}
+                              </div>
+                              <div class="col-auto">
+                                 <div class="icon icon-shape bg-orange text-white rounded-circle shadow">
+                                    <i class="ni ni-badge"></i>
+                                 </div>
+                              </div>
+                           </div>
                         </div>
-                        </div>
-                        <div class="col-lg-6">
-                        <div class="form-group">
-                            <label class="form-control-label" for="input-email">Email address</label>
-                            <input type="email" id="input-email" class="form-control form-control-alternative" 
-                                   placeholder="Email" value="{{ current_user.email }}">
-                        </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-6">
-                        <div class="form-group">
-                            <label class="form-control-label" for="input-first-name">First name</label>
-                            <input type="text" id="input-first-name" class="form-control form-control-alternative" placeholder="First name" value="Lucky">
-                        </div>
-                        </div>
-                        <div class="col-lg-6">
-                        <div class="form-group">
-                            <label class="form-control-label" for="input-last-name">Last name</label>
-                            <input type="text" id="input-last-name" class="form-control form-control-alternative" placeholder="Last name" value="Jesse">
-                        </div>
-                        </div>
-                    </div>
-                    </div>
-					-->
-                </form>
-                </div>
+                     </div>
+                  </div>
+               </div>
             </div>
+            <div class="card-body pt-0">
+               <div class="text-center">
+                  <h3>
+                     {{ current_user.first_name }}
+					 {{ current_user.last_name }}
+                  </h3>
+               </div>
             </div>
-        </div>
-    
-        {% include "site_template/footer.html" %}
-        
-    </div>    
+         </div>
+      </div>
+      <div class="col-md-6">
+         <div class="card bg-secondary shadow">
+            <div class="card-header bg-white border-0">
+               <div class="row align-items-center">
+                  <div class="col-8">
+                     <h3 class="mb-0">My account</h3>
+                  </div>
+                  <div class="col-4 text-right">
+                     <a href="#!" class="btn btn-sm btn-primary">Settings</a>
+                  </div>
+               </div>
+			   <div class="text-muted text-center">
+                {% if success %}
+                  <span class="text-success">{{ success | safe }}</span>
+                {% endif %}
+              </div>
+            </div>
+            <div class="card-body">
+               <form method="post" action="">
+		          {% from "site_template/_formhelpers.html" import render_errors %}
 
+                  {{ form.hidden_tag() }}
+				  
+                  <h6 class="heading-small text-muted mb-4">User information - {{ current_user.id }}</h6>
+                  <div class="form-group">
+					 <label class="form-control-label" for="input-username">Username</label>
+					 <div class="input-group input-group-alternative">
+                      <div class="input-group-prepend">
+                        <span class="input-group-text"><i class="ni ni-single-02"></i></span>
+                      </div>
+                      {{ form.username(value=current_user.username, id="input-username", class="form-control") }}
+                    </div>
+					{{ render_errors(form.username) }}
+                  </div>
+                  <div class="form-group">
+					 <label class="form-control-label" for="input-email">Email address</label>
+					 <div class="input-group input-group-alternative">
+                      <div class="input-group-prepend">
+                        <span class="input-group-text"><i class="ni ni-email-83"></i></span>
+                      </div>
+                      {{ form.email(value=current_user.email, id="input-email", class="form-control") }}
+                    </div>
+					{{ render_errors(form.email) }}
+                  </div>
+                  <div class="form-group">
+                     <label class="form-control-label" for="input-first-name">First name</label>
+					 <div class="input-group input-group-alternative">
+                      <div class="input-group-prepend">
+                        <span class="input-group-text"><i class="ni ni-circle-08"></i></span>
+                      </div>
+                      {{ form.first_name(value=current_user.first_name, id="input-first-name", class="form-control") }}
+                    </div>
+					{{ render_errors(form.first_name) }}
+                  </div>
+                  <div class="form-group">
+                     <label class="form-control-label" for="input-last-name">Last name</label>
+					 <div class="input-group input-group-alternative">
+                      <div class="input-group-prepend">
+                        <span class="input-group-text"><i class="ni ni-circle-08"></i></span>
+                      </div>
+                      {{ form.last_name(value=current_user.last_name, id="input-last-name", class="form-control") }}
+                    </div>
+					{{ render_errors(form.last_name) }}
+                  </div>
+                  <div class="form-group">
+                     <span>
+                     <label class="form-control-label" for="exampleFormControlSelect1">Language</label>
+                     <i class="ni ni-world-2 align-middle"></i>
+                     </span>
+                     <select class="form-control" id="exampleFormControlSelect1">
+                        <option>1</option>
+                        <option>2</option>
+                        <option>3</option>
+                        <option>4</option>
+                        <option>5</option>
+                     </select>
+                  </div>
+                  <div class="text-center">
+                     <button type="submit" name="save" class="btn btn-primary my-4">Save edits</button>
+                  </div>
+                  <!--
+                     <div class="pl-lg-4">
+                                    <div class="row">
+                                        <div class="col-lg-6">
+                                        <div class="form-group">
+                                            <label class="form-control-label" for="input-username">Username</label>
+                                            <input type="text" id="input-username" class="form-control form-control-alternative" 
+                                                   placeholder="Username" value="{{ current_user.username }}">
+                                        </div>
+                                        </div>
+                                        <div class="col-lg-6">
+                                        <div class="form-group">
+                                            <label class="form-control-label" for="input-email">Email address</label>
+                                            <input type="email" id="input-email" class="form-control form-control-alternative" 
+                                                   placeholder="Email" value="{{ current_user.email }}">
+                                        </div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-lg-6">
+                                        <div class="form-group">
+                                            <label class="form-control-label" for="input-first-name">First name</label>
+                                            <input type="text" id="input-first-name" class="form-control form-control-alternative" placeholder="First name" value="Lucky">
+                                        </div>
+                                        </div>
+                                        <div class="col-lg-6">
+                                        <div class="form-group">
+                                            <label class="form-control-label" for="input-last-name">Last name</label>
+                                            <input type="text" id="input-last-name" class="form-control form-control-alternative" placeholder="Last name" value="Jesse">
+                                        </div>
+                                        </div>
+                                    </div>
+                                    </div>
+                     -->
+               </form>
+            </div>
+         </div>
+      </div>
+   </div>
+   {% include "site_template/footer.html" %}
+</div>
 {% endblock content %}
-
 {% block javascripts %}
-  {{ super()}}
+{{ super()}}
 {% endblock javascripts %}
