Started to implement hotel selection page

--- a/app/base/templates/site_template/sidebar.html
+++ b/app/base/templates/site_template/sidebar.html
@@ -88,15 +88,10 @@
             </a>
           </li>
           <li class="nav-item">
-              <a class="nav-link " href="/maps">
-                <i class="ni ni-pin-3 text-orange"></i> Maps
+              <a class="nav-link " href="/hotels_select">
+                <i class="ni ni-building text-primary"></i> Your hotels
               </a>
           </li>          
-          <li class="nav-item">
-            <a class="nav-link" href="/tables">
-              <i class="ni ni-bullet-list-67"></i> Tables
-            </a>
-          </li>
 
           {% if current_user.is_authenticated %}
 
