Completed hotel selection page

--- a/app/base/templates/site_template/navigation.html
+++ b/app/base/templates/site_template/navigation.html
@@ -11,7 +11,7 @@
               <div class="input-group-prepend">
                 <span class="input-group-text"><i class="fas fa-search"></i></span>
               </div>
-              <input class="form-control" placeholder="Search" type="text">
+              <input id="searchBar" class="form-control" placeholder="Search" onkeyup="searchLimiter()" type="text">
             </div>
           </div>
         </form>
