--- a/app/home/templates/profile.html
+++ b/app/home/templates/profile.html
@@ -209,4 +209,9 @@
 {% endblock content %}
 {% block javascripts %}
 {{ super()}}
+<script>
+	function searchLimiter() {
+		<!-- TODO: Implement later! -->
+	}
+</script>
 {% endblock javascripts %}
